--- a/share/gpodder/ui/hdy/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/hdy/gpodderepisodeselector.ui
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.2 -->
+<!-- Generated with glade 3.38.2 -->
 <!--*- mode: xml -*-->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <requires lib="libhandy" version="1.0"/>
   <object class="HdyWindow" id="gPodderEpisodeSelector">
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <child>
       <object class="HdyDeck" id="new_deck">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="can_swipe_back">True</property>
+        <property name="can-focus">False</property>
+        <property name="can-swipe-back">True</property>
         <child>
           <object class="GtkBox" id="new_episodes_box">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="hexpand">True</property>
             <property name="orientation">vertical</property>
             <child>
               <object class="HdyHeaderBar" id="selector_header_bar">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="title" translatable="yes">Select episodes</property>
                 <child>
                   <object class="GtkButton" id="new_episodes_forward">
                     <property name="visible">True</property>
                     <property name="sensitive">False</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
                     <signal name="clicked" handler="on_new_episodes_forward_clicked" swapped="no"/>
                     <child>
                       <object class="GtkImage">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="icon_name">go-next-symbolic</property>
+                        <property name="can-focus">False</property>
+                        <property name="icon-name">go-next-symbolic</property>
                       </object>
                     </child>
                   </object>
                   <packing>
-                    <property name="pack_type">end</property>
+                    <property name="pack-type">end</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -51,11 +51,11 @@
             </child>
             <child>
               <object class="GtkLabel" id="labelInstructions">
-                <property name="can_focus">False</property>
-                <property name="margin_left">8</property>
-                <property name="margin_right">8</property>
-                <property name="margin_top">8</property>
-                <property name="margin_bottom">8</property>
+                <property name="can-focus">False</property>
+                <property name="margin-left">8</property>
+                <property name="margin-right">8</property>
+                <property name="margin-top">8</property>
+                <property name="margin-bottom">8</property>
                 <property name="label">additional text</property>
                 <property name="xalign">0</property>
               </object>
@@ -68,15 +68,15 @@
             <child>
               <object class="GtkScrolledWindow" id="scrolledwindow7">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="shadow_type">in</property>
+                <property name="can-focus">True</property>
+                <property name="shadow-type">in</property>
                 <child>
                   <object class="GtkTreeView" id="treeviewEpisodes">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="headers_visible">False</property>
-                    <property name="enable_search">False</property>
-                    <property name="activate_on_single_click">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="headers-visible">False</property>
+                    <property name="enable-search">False</property>
+                    <property name="activate-on-single-click">True</property>
                     <signal name="row-activated" handler="on_row_activated" swapped="no"/>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection"/>
@@ -93,10 +93,10 @@
             <child>
               <object class="GtkLabel" id="labelTotalSize">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="margin_left">8</property>
-                <property name="margin_right">8</property>
-                <property name="margin_top">8</property>
+                <property name="can-focus">False</property>
+                <property name="margin-left">8</property>
+                <property name="margin-right">8</property>
+                <property name="margin-top">8</property>
                 <property name="justify">right</property>
                 <property name="xalign">1</property>
               </object>
@@ -109,32 +109,32 @@
             <child>
               <object class="GtkBox" id="hboxButtons">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="margin_left">8</property>
-                <property name="margin_right">8</property>
-                <property name="margin_top">8</property>
+                <property name="can-focus">False</property>
+                <property name="margin-left">8</property>
+                <property name="margin-right">8</property>
+                <property name="margin-top">8</property>
                 <property name="spacing">5</property>
                 <child>
                   <object class="GtkButton" id="btnCheckAll">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
                     <signal name="clicked" handler="on_btnCheckAll_clicked" swapped="no"/>
                     <child>
                       <object class="GtkAlignment" id="alignment22">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="xscale">0</property>
                         <property name="yscale">0</property>
                         <child>
                           <object class="GtkBox" id="hbox34">
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
+                            <property name="can-focus">False</property>
                             <property name="spacing">2</property>
                             <child>
                               <object class="GtkImage" id="image2636">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="stock">gtk-apply</property>
                               </object>
                               <packing>
@@ -146,9 +146,9 @@
                             <child>
                               <object class="GtkLabel" id="label107">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="label" translatable="yes">Select all</property>
-                                <property name="use_underline">True</property>
+                                <property name="use-underline">True</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -170,24 +170,24 @@
                 <child>
                   <object class="GtkButton" id="btnCheckNone">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
                     <signal name="clicked" handler="on_btnCheckNone_clicked" swapped="no"/>
                     <child>
                       <object class="GtkAlignment" id="alignment21">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="xscale">0</property>
                         <property name="yscale">0</property>
                         <child>
                           <object class="GtkBox" id="hbox33">
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
+                            <property name="can-focus">False</property>
                             <property name="spacing">2</property>
                             <child>
                               <object class="GtkImage" id="image2635">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="stock">gtk-revert-to-saved</property>
                               </object>
                               <packing>
@@ -199,9 +199,9 @@
                             <child>
                               <object class="GtkLabel" id="label106">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="label" translatable="yes">Select none</property>
-                                <property name="use_underline">True</property>
+                                <property name="use-underline">True</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -230,16 +230,16 @@
             <child>
               <object class="GtkButtonBox" id="hbox1">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="margin_top">8</property>
-                <property name="margin_bottom">8</property>
-                <property name="layout_style">end</property>
+                <property name="can-focus">False</property>
+                <property name="margin-top">8</property>
+                <property name="margin-bottom">8</property>
+                <property name="layout-style">end</property>
                 <child>
                   <object class="GtkButton" id="btnRemoveAction">
                     <property name="label">Remove</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="use_stock">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="use-stock">True</property>
                     <signal name="clicked" handler="on_remove_action_activate" swapped="no"/>
                   </object>
                   <packing>
@@ -252,9 +252,9 @@
                   <object class="GtkButton" id="btnCancel">
                     <property name="label">gtk-cancel</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="use_stock">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="use-stock">True</property>
                     <signal name="clicked" handler="on_btnCancel_clicked" swapped="no"/>
                   </object>
                   <packing>
@@ -267,11 +267,11 @@
                   <object class="GtkButton" id="btnOK">
                     <property name="label">gtk-ok</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="can_default">True</property>
-                    <property name="has_default">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="use_stock">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="can-default">True</property>
+                    <property name="has-default">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="use-stock">True</property>
                     <signal name="clicked" handler="on_btnOK_clicked" swapped="no"/>
                   </object>
                   <packing>
@@ -292,26 +292,26 @@
         <child>
           <object class="GtkBox" id="detailsbox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="hexpand">True</property>
             <property name="orientation">vertical</property>
             <child>
               <object class="HdyHeaderBar" id="details_header_bar">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="title" translatable="yes">Episode details</property>
-                <property name="has_subtitle">False</property>
+                <property name="has-subtitle">False</property>
                 <child>
                   <object class="GtkButton" id="notes_back">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
                     <signal name="clicked" handler="on_notes_back_clicked" swapped="no"/>
                     <child>
                       <object class="GtkImage">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="icon_name">go-previous-symbolic</property>
+                        <property name="can-focus">False</property>
+                        <property name="icon-name">go-previous-symbolic</property>
                       </object>
                     </child>
                   </object>
@@ -326,7 +326,7 @@
             <child>
               <object class="GtkBox" id="shownotes_box">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="vexpand">True</property>
                 <property name="orientation">vertical</property>
                 <child>
@@ -336,7 +336,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="pack_type">end</property>
+                <property name="pack-type">end</property>
                 <property name="position">1</property>
               </packing>
             </child>
