--- a/share/gpodder/ui/adaptive/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/adaptive/gpodderepisodeselector.ui
@@ -52,8 +52,8 @@
             <child>
               <object class="GtkLabel" id="labelInstructions">
                 <property name="can-focus">False</property>
-                <property name="margin-left">8</property>
-                <property name="margin-right">8</property>
+                <property name="margin-start">8</property>
+                <property name="margin-end">8</property>
                 <property name="margin-top">8</property>
                 <property name="margin-bottom">8</property>
                 <property name="label">additional text</property>
@@ -95,8 +95,8 @@
               <object class="GtkLabel" id="labelTotalSize">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-left">8</property>
-                <property name="margin-right">8</property>
+                <property name="margin-start">8</property>
+                <property name="margin-end">8</property>
                 <property name="margin-top">8</property>
                 <property name="justify">right</property>
                 <property name="xalign">1</property>
@@ -111,8 +111,8 @@
               <object class="GtkBox" id="hboxButtons">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-left">8</property>
-                <property name="margin-right">8</property>
+                <property name="margin-start">8</property>
+                <property name="margin-end">8</property>
                 <property name="margin-top">8</property>
                 <property name="spacing">5</property>
                 <child>
